--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,14 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+.custom-modal {
+  width: 90%; /* Chiếm 4/5 màn hình theo chiều ngang */
+  height: 90%; /* Chiếm 4/5 màn hình theo chiều dọc */
+  /* Hiệu ứng blur */
+  background-color: transparent !important; /* Loại bỏ màu nền */
+  box-shadow: none; /* Loại bỏ shadow */
+  border: none; /* Loại bỏ border */
+}
 body {
   margin: 0;
   font-family: "Nunito", sans-serif, -apple-system, BlinkMacSystemFont,
@@ -329,4 +336,42 @@ html,
   left: 0;
   width: 100%;
   z-index: 999;
+}
+.lds-ring {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border: 3px solid #fcf;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: black transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
