send file function

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -205,6 +205,10 @@ html,
   position: relative;
   display: inline-block;
 }
+.file-wrapper {
+  position: relative;
+  display: inline-block;
+}
 
 .delete-btn {
   position: absolute;
