Modify: UI, Add: split chatland into component

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -58,8 +58,7 @@ html,
   position: relative;
   border-bottom: 1px solid rgb(100, 100, 100);
   width: 100%;
-  background-color: #6c6f73;
-
+  background-color: white;
 }
 
 .user-card .text-content {
@@ -93,8 +92,8 @@ html,
 /* Message Box */
 .message-box {
   height: 100vh;
-  background-color: #2b2d31;
-  border: solid 1px black;
+  background-color: white;
+
 }
 
 /* Notification */
@@ -129,6 +128,18 @@ html,
   /* Màu của thanh cuộn khi di chuột qua */
 }
 
+/* .empty-screen {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: white;
+  border-left: 1px solid #dde0e2;
+  height: 100vh;
+  z-index: 1000;
+  transition: right 0.3s ease;
+} */
+
 /* Chat Box */
 .chat-box {
   position: relative;
@@ -146,9 +157,9 @@ html,
   align-items: start;
   justify-content: start;
   padding: 0.85rem;
-  color: white;
-  background: #1e1f22;
-  border-bottom: 1px solid black;
+  color: black;
+  background: white;
+  border-bottom: 1px solid #dde0e2;
 }
 
 .chat-header-condition {
@@ -173,12 +184,7 @@ html,
   overflow-y: auto;
   padding: 0 2rem;
   background: rgb(207, 207, 207);
-  background: linear-gradient(225deg,
-      rgb(124, 124, 124),
-      rgb(66, 66, 66),
-      rgb(0, 0, 0),
-      rgb(28, 42, 48),
-      rgb(139, 139, 139));
+  background: linear-gradient(45deg, #98ADB5ff, #C6C6C6ff, #D5CFCAff, #E0DED8ff, #E9EAE5ff);
 }
 
 .message {
@@ -218,11 +224,11 @@ html,
 
 /* Chat Input  */
 .chat-input {
-  color: white;
-  border-top: solid 1px black;
+  color: black;
+  border-top: solid 1px #dde0e2;
   margin-top: auto;
   width: 100%;
-  background: #1e1f22;
+  background: white;
   padding: 1rem;
   padding-top: 0px;
   display: block;
@@ -271,8 +277,8 @@ html,
 }
 
 .friend-list-header {
-  border-bottom: 1px solid white;
-  color: white;
+  border-bottom: 1px solid black;
+  color: black;
 
   span {
     font-size: 14px;
@@ -280,8 +286,8 @@ html,
 }
 
 .group-list-header {
-  border-bottom: 1px solid white;
-  color: white;
+  border-bottom: 1px solid black;
+  color: black;
 
   span {
     font-size: 14px;
@@ -293,8 +299,8 @@ html,
 }
 
 .friend-requests-header {
-  border-bottom: 1px solid white;
-  color: white;
+  border-bottom: 1px solid black;
+  color: black;
 
   span {
     font-size: 14px;
@@ -399,4 +405,10 @@ html,
   100% {
     transform: rotate(360deg);
   }
+
+}
+
+.reverse-order {
+  display: flex;
+  flex-direction: row-reverse;
 }
