--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,6 +62,10 @@ html,
   color: black;
 }
 
+.user-card:hover {
+  background-color: #e5efff;
+}
+
 .user-card .text-content {
   padding-top: 10px;
   width: 170px;
@@ -173,7 +177,14 @@ html,
   overflow-y: auto;
   padding: 0 2rem;
   background: rgb(207, 207, 207);
-  background: linear-gradient(45deg, #A9B8BBff, #C1C4C7ff, #D4CCC9ff, #D9D9D2ff, #E8E9E4ff);
+  background: linear-gradient(
+    45deg,
+    #a9b8bbff,
+    #c1c4c7ff,
+    #d4ccc9ff,
+    #d9d9d2ff,
+    #e8e9e4ff
+  );
 }
 
 .message {
@@ -181,7 +192,7 @@ html,
   background: #282828;
   padding: 0.75rem;
   border-radius: 5px;
-  max-width: 70%;
+  max-width: 50%;
 }
 
 .message.self {
@@ -201,6 +212,10 @@ html,
 }
 
 .file-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.reply-wrapper {
   position: relative;
   display: inline-block;
 }
@@ -263,7 +278,7 @@ html,
 .nav-contact {
   font-size: 18px;
   height: 100vh;
-  border-right: 1px solid black;
+  border-right: 1px solid #ebedf0;
 
   .tab-link:hover {
     background-color: #e5efff;
@@ -399,4 +414,21 @@ html,
   100% {
     transform: rotate(360deg);
   }
+}
+
+.message-buttons-container {
+  display: flex;
+  /* Sử dụng flexbox để sắp xếp các nút */
+  align-items: center;
+  /* Canh giữa theo chiều dọc */
+}
+
+/* Nếu message.senderId == userInfo?.id, sắp xếp từ phải sang trái */
+.message-buttons-container.sender-is-user {
+  flex-direction: row-reverse;
+}
+
+/* Nếu message.senderId != userInfo?.id, sắp xếp từ trái sang phải */
+.message-buttons-container.sender-not-user {
+  flex-direction: row;
 }
