--- a/client/src/index.css
+++ b/client/src/index.css
@@ -84,14 +84,29 @@ html,
 
 .user-online {
   display: inline-block;
-  height: 12px;
-  width: 12px;
+  height: 15px;
+  width: 15px;
   border-radius: 50%;
   background: rgb(0, 219, 0);
   position: absolute;
-  top: -3px;
-  right: 5px;
+  bottom: 19px;
+  left: 62px;
   z-index: 2;
+  border: 2px solid white;
+  padding: 7px;
+}
+.user-offline {
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  background: rgb(219, 0, 0);
+  position: absolute;
+  bottom: 19px;
+  left: 62px;
+  z-index: 2;
+  border: 2px solid white;
+  padding: 7px;
 }
 
 /* Message Box */
