feature : reaction message.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,9 @@
   border: none;
   /* Loại bỏ border */
 }
+.custom-modal1 {
+  background-color: rgba(0, 0, 0, 0.5); /* Chọn màu nền bạn muốn */
+}
 
 body {
   margin: 0;
@@ -221,12 +224,14 @@ html,
   overflow-y: auto;
   padding: 0 2rem;
   background: rgb(207, 207, 207);
-  background: linear-gradient(45deg,
-      #a9b8bbff,
-      #c1c4c7ff,
-      #d4ccc9ff,
-      #d9d9d2ff,
-      #e8e9e4ff);
+  background: linear-gradient(
+    45deg,
+    #a9b8bbff,
+    #c1c4c7ff,
+    #d4ccc9ff,
+    #d9d9d2ff,
+    #e8e9e4ff
+  );
 }
 
 .message {
@@ -487,13 +492,9 @@ html,
   border-radius: 5px;
   background: #c9d6ff;
   /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right,
-      #e2e2e2,
-      #c9d6ff);
+  background: -webkit-linear-gradient(to right, #e2e2e2, #c9d6ff);
   /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right,
-      #e2e2e2,
-      #c9d6ff);
+  background: linear-gradient(to right, #e2e2e2, #c9d6ff);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   padding: 2rem;
