--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,8 +83,8 @@ html,
 .user-card .text,
 .user-card .date {
   top: 0px;
-  font-size: 14px;
-  color: black;
+  font-size: 12px;
+  color: rgb(142, 140, 140);
 }
 
 .user-online {
@@ -226,12 +226,14 @@ html,
   overflow-y: auto;
   padding: 0 2rem;
   background: rgb(207, 207, 207);
-  background: linear-gradient(45deg,
-      #a9b8bbff,
-      #c1c4c7ff,
-      #d4ccc9ff,
-      #d9d9d2ff,
-      #e8e9e4ff);
+  background: linear-gradient(
+    45deg,
+    #a9b8bbff,
+    #c1c4c7ff,
+    #d4ccc9ff,
+    #d9d9d2ff,
+    #e8e9e4ff
+  );
 }
 
 .message {
