--- a/client/src/index.css
+++ b/client/src/index.css
@@ -226,14 +226,12 @@ html,
   overflow-y: auto;
   padding: 0 2rem;
   background: rgb(207, 207, 207);
-  background: linear-gradient(
-    45deg,
-    #a9b8bbff,
-    #c1c4c7ff,
-    #d4ccc9ff,
-    #d9d9d2ff,
-    #e8e9e4ff
-  );
+  background: linear-gradient(45deg,
+      #a9b8bbff,
+      #c1c4c7ff,
+      #d4ccc9ff,
+      #d9d9d2ff,
+      #e8e9e4ff);
 }
 
 .message {
@@ -299,8 +297,8 @@ html,
 .chat-input-icon:hover {
   cursor: pointer;
   background-color: rgb(200, 200, 200);
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .send-btn {
